# geodesiq-control

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: __init__.py  _models.py  interactive_benchmark_explorer.ipynb  interactive_benchmark_plot_selector.py  run_benchmarks.py
benchmarks/results/: README.md  benchmark_history.parquet
dev/: API_ussage.py  BoundaryCondition.ipynb  ComplexHamiltonian.ipynb  DiabaticEvolution.ipynb  DynamicsTrial.ipynb  Fidelity4ls.ipynb  Flags.ipynb  LZ_adiabatic.ipynb  PlotTensor.ipynb  PulseClassMethods.ipynb  bump_version.py  pulse_class_test.ipynb  pulse_data.csv  pulse_data.txt
docs/: api.md
examples/: dqd_model.ipynb  landau_zener.ipynb  many_body.ipynb
old_files/hyperQUAD/: quad_control.py
old_files/tests/: diad_LZ.ipynb  dqd5_example.ipynb
src/geodesiq/: __init__.py  _meta.py  _utils.py  about.py  controlmodel.py  dynamics.py  exceptions.py  fidelity.py  hamiltonian.py  pulses.py  utils.py  warnings.py
src/geodesiq/pulses/: pulse_solver.py
tests/: test_about.py  test_bump_version.py  test_dynamics.py  test_exceptions.py  test_flags.py  test_hamiltonian.py  test_model.py  test_pulses.py  test_regressions.py  test_utils.py  test_warnings.py
