[project]
name = "geodesiq"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.11.0"]
docs = ["sphinx>=8"]

[dependency-groups]
dev = [
    "ipykernel==6.29.5", # pinned to avoid problem with ipywidgets
    "ipympl>=0.10.0",
    "joblib>=1.5.2",
    "jupyterlab>=4.5.8",
    "jupyterlab-execute-time>=3.3.0",
    "qutip>=5.3.0",
    "theme-darcula>=4.0.0",
    "tqdm>=4.68.2",
    "scipy-stubs>=1.17.1.5",
    "pytest>=9.1.0",
    "parameterrun>=0.4.1",
    "quspin>=1.0.1",
]
bench = [
    "pytest-benchmark>=5",
]

[tool.uv]
package = true

[tool.setuptools.dynamic]
version = { attr = "geodesiq._meta.__version__" }
