[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "geodesiq"
dynamic = ["version"]
description = "A Python package for computing optimal quantum control pulses using the geodesic approach."
readme = "README.md"
license = "LGPL-2.1-only"
license-files = ["LICENSE"]
authors = [
    { name = "David Fernández-Fernández", email = "david.fernandezf@hotmail.com" },
    { name = "Christian Ventura Meinersen", email = "C.VenturaMeinersen@tudelft.nl" }
]
requires-python = ">=3.10"
keywords = ["quantum-control", "optimal-control", "geodesic", "quantum-computing", "python", "spin-qubits",
    "superconducting-qubits", "trapped-ions", "quantum-dots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.14",
    "qutip>=5.0.4",
]

[project.urls]
Homepage = "https://github.com/geodesiq-control/geodesiq-control"
Repository = "https://github.com/geodesiq-control/geodesiq-control"
Issues = "https://github.com/geodesiq-control/geodesiq-control/issues"

[project.optional-dependencies]
plot = ["matplotlib>=3.9"]

[dependency-groups]
bench = [
    "matplotlib>=3.9",
    "pandas>=2.0",
    "pyarrow>=15",
    "tqdm>=4.68",
]
dev = [
    "ipykernel==6.29.5", # pinned to avoid problem with ipywidgets
    "ipympl>=0.10.0",
    "joblib>=1.5.2",
    "jupyterlab>=4.5.8",
    "jupyterlab-execute-time>=3.3.0",
    "theme-darcula>=4.0.0",
    "tqdm>=4.68.2",
    "parameterrun>=0.4.1",
    "quspin>=1.0.0",
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.11",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=6",
]

[tool.hatch.version]
path = "src/geodesiq/_meta.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.uv]
package = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=geodesiq --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]
exclude = [
    "dev",
    "examples",
    "old_files",
]


[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["I001"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
